  derived from it could take advantage of Qt's native dockable window support.
+ Made the right-click menus of SEQWindow derived windows come up in a
  more consistent fashion.
+ Added support for storing 64 bit integers, QPens, and QBrushes to the 
  XML preference system.
+ Fixed the spawn logger to log the adjusted x/y/z values for zone/new spawns..
+ Found zonePoint in doorStruct.  
+ zones.h, changed 162 to be ssratemple and 182 to be nedaria, thanks to 
  darkgrue and uRit1u2CBBA= respectively.
+ Integrated patch# 832080 "freebsd-stable compile 10/24/03" from jonseq
+ Integrated patch# 844078 "Fix to class displays" by belith (UnGod).

dohpaZ (10/24/03)
---------------------
+ Updated version to 4.3.17.1
+ Fixed build for certain Linux variants.
+ Made it support Qt 3.0.5 again.

dohpaZ (10/24/03)
---------------------
+ Updated version to 4.3.17
+ More opcode and structure fixes for 10/09/03 patch.  This includes ones that
  appear to made the Combat Window and Experience Window not work.  It also
  includes the fix for the zoom out to oblivion bug.
+ Assorted bug fixes
+ Integrated patch# 824478 "HP Changed fix (and compile error fix)" 
  from belith (UnGod)
+ Integrated patch# 824942 "utf8 support for spawn names" from suseuser7341
+ Added handling for OP_SpecialMesg and OP_GuildMOTD, and initial support for
  OP_SendZonePoints.
+ Added DateTimeMgr to manage EQ Time keeping (and removed the other places
  where EQTime was being tracked).
+ Some cleanup and optimization of SEQLogger.
+ Some cleanup and optimization of SpawnLog (formerly SpawnLogger). Also, 
  updated it use DateTimeMgr.
+ Moved packet logging out of EQPacket and cleaned it up.
+ Major refactoring and cleanup of packet handling (stage 1).
+ Modified the FilterMgr to support both global and zone specific filters.
+ Made change filter case sensitivity take place during the next time
  the filters are loaded.  No longer have to restart ShowEQ for it to take
  effect.